--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.13",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.11",
     "pg": "^7.8.0",
     "treeize": "^2.1.2",
     "xss": "^1.0.3"
